# config/urls.py
@@ -24,4 +24,5 @@ urlpatterns = [
     path("api/docs/", SpectacularSwaggerView.as_view(url_name="schema"), name="swagger-ui"),
     path("api/v1/auth/", include("apps.auth.urls")),
     path("api/v1/users/", include("apps.users.urls")),
+    path("api/v1/commodities/", include("apps.commodities.urls")),
 ]
